# bicycle

./: .gitignore  CMakeLists.txt  README.md  card.c  deck.c  deck.h  main.c
src/: card.h  main.c
src/core/: card.c  card.h  clock.c  clock.h  deck.c  deck.h
src/games/: baccarat.c  baccarat.h
